Added README.md and now the binary file appears in the bin directory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,11 @@ project(walugen
         HOMEPAGE_URL "https://github.com/SmaileXM/Walugen")
 
 set(PROJECT_LICENSE "MIT license")
-
 set(FLAGS "-Wall -Wextra")
 
 SET(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} ${FLAGS}")
+
+set(PROJECT_BINARY_DIR ../bin)
 
 set(SOURCE 
     src/main.c
@@ -21,5 +22,7 @@ set(SOURCE
     src/base/backend/wallpaper/swaybg.c
     src/func/def.c
     src/msg/log.c)
+
+SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
 
 add_executable(walugen ${SOURCE})
